emoine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emoine-deployment
  labels:
    app: emoine
spec:
  selector:
    matchLabels:
      app: emoine
  template:
    metadata:
      labels:
        app: emoine
    spec:
      nodeSelector:
        kubernetes.io/hostname: las211.tokyotech.org
      containers:
        - name: emoine
          image: ghcr.io/traptitech/emoine:latest@sha256:29d52cd47288ef0721b4ef420f8bad785ee4eb3b071ee1ba2c609d30a6dd9eba
          args: ["./Emoine"]
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
