emoine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emoine

spec:
  type: ClusterIP
  selector:
    app: emoine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
